# periapsis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: quality-checks.yml  release.yml
src/: lib.rs
